--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -39,5 +39,5 @@ jobs:
         with:
           context: .
           push: true
-          tags: latest
+          tags: deminy/ext-bsdiff:latest
           labels: ${{ steps.meta.outputs.labels }}
